<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/page2_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CE0707"
        android:text="@string/i_tuoi_dati"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/page2_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorPrimary"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page2_head">


        <EditText
            android:id="@+id/nome"
            android:hint="@string/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="2dp"
            android:background="#fde8f7"
            android:clickable="true"
            android:textSize="18sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/white_text" />
        <EditText
            android:id="@+id/cognome"
            android:hint="@string/cognome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="2dp"
            android:background="#fde8f7"
            android:clickable="false"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/white_text" />

        <EditText
            android:id="@+id/cellulare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="2dp"
            android:background="#fde8f7"
            android:clickable="false"
            android:hint="@string/cellulare"
            android:textSize="18sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/white_text" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:layout_gravity="start"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="2dp"
            android:background="#fde8f7"
            android:clickable="false"
            android:imeOptions="actionDone"
            android:textSize="18sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="#FFFFFF"
            android:clickable="false"
            android:text="Tutti i campi sono obbligatori"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="14sp"
            android:textStyle="italic" />

    <Button
        android:id="@+id/button_conferma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conferma"
        android:background="#fde8f7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page2_body"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        />

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@color/white_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CE0707"
            android:text="@string/cambio_password"
            android:textColor="#FFFFFF"
            android:textSize="18sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/white_text" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nuova_passord"
            android:layout_gravity="start"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="2dp"
            android:background="#fde8f7"
            android:textSize="18sp"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/white_text"/>

        <EditText
            android:id="@+id/repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ripeti_la_password"
            android:layout_gravity="start"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="2dp"
            android:background="#fde8f7"
            android:textSize="18sp"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"/>

        <Button
            android:id="@+id/button_conferma1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conferma"
            android:background="#fde8f7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/page2_body"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


